test/constBlockConsuming16_2.slq

def foo(x:ğ”¹){
	y:=dup(x);
	z:=dup(y);
	if z{
		w:=X(z); /// error
		x:=H(x);
	}else{
		w:=z;
	}
	return (x,w);
}

